# cmwvoronoi

./: .gitignore  CMakeLists.txt  README.md  SimplifyWindow.cpp  voronoi.qrc  voronoi_pt.qm  voronoi_pt.ts  voronoi_sp.qm  voronoi_sp.ts
include/: SimplifyWindow.h  UIVoronoi.h  Utils.h  VoronoiDiagramGenerator.h  VoronoiWindow.h  awv.h  cmwv.h  cmwv_definitions.h  cmwv_ps.h  geometryreader.h  grid.h  mwv.h  mwv_base.h  mwv_grid.h  voronoiBaseWindow.h  voronoidiagramPluginCode.h  voronoidiagramplugin.h
src/: SimplifyWindow.cpp  VoronoiWindow.cpp  awv.cpp  cmwv.cpp  cmwv_ps.cpp  geometryreader.cpp  grid.cpp  mwv.cpp  mwv_base.cpp  mwv_grid.cpp  voronoiBaseWindow.cpp  voronoidiagramPluginCode.cpp  voronoidiagramplugin.cpp
tests/: UIVoronoi.cpp  UIVoronoi.h  main.cpp  main_tests.cpp
ui/: UIVoronoi.ui  simplify.ui
